# pf

./: .README.md.swp  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  build_everything  build_lib.sh  ideas_list.html  ideas_list.md  pf.mk  pf.project  pf.txt
.github/: FUNDING.yml
Debug/: examples_svol_comparison.cpp.o.d  src_rv_eval.cpp.o.d  src_rv_samp.cpp.o.d
Release/: examples_svol_comparison.cpp.o.d  src_rv_eval.cpp.o.d  src_rv_samp.cpp.o.d
docs/: index.html
docs/html/: acv__bs_8h_source.html  annotated.html  annotated_dup.js  auxiliary__pf_8h.html  auxiliary__pf_8h__incl.map  auxiliary__pf_8h__incl.md5  auxiliary__pf_8h_source.html  bootstrap__filter_8h.html  bootstrap__filter_8h__dep__incl.map  bootstrap__filter_8h__dep__incl.md5  bootstrap__filter_8h__incl.map  bootstrap__filter_8h__incl.md5  bootstrap__filter_8h_source.html  bootstrap__filter__with__covariates_8h.html  bootstrap__filter__with__covariates_8h__incl.map  bootstrap__filter__with__covariates_8h__incl.md5  bootstrap__filter__with__covariates_8h_source.html  cf__filters_8h.html  cf__filters_8h__dep__incl.map  cf__filters_8h__dep__incl.md5  cf__filters_8h__incl.map  cf__filters_8h__incl.md5  cf__filters_8h_source.html  classAPF-members.html  classAPF.html  classAPF.js  classAPF__coll__graph.map  classAPF__coll__graph.md5  classAPF__inherit__graph.map  classAPF__inherit__graph.md5  classBSFilter-members.html  classBSFilter.html  classBSFilter.js  classBSFilterWC-members.html  classBSFilterWC.html  classBSFilterWC.js  classBSFilterWC__coll__graph.md5  classBSFilterWC__inherit__graph.map  classBSFilterWC__inherit__graph.md5  classBSFilter__coll__graph.map  (+634 more)
docs/latex/: annotated.tex  auxiliary__pf_8h.tex  auxiliary__pf_8h__incl.md5  bootstrap__filter_8h.tex  bootstrap__filter_8h__dep__incl.md5  bootstrap__filter_8h__incl.md5  bootstrap__filter__with__covariates_8h.tex  bootstrap__filter__with__covariates_8h__incl.md5  cf__filters_8h.tex  cf__filters_8h__dep__incl.md5  cf__filters_8h__incl.md5  classAPF.tex  classAPF__coll__graph.md5  classAPF__inherit__graph.md5  classBSFilter.tex  classBSFilterWC.tex  classBSFilterWC__coll__graph.md5  classBSFilterWC__inherit__graph.md5  classBSFilter__coll__graph.md5  classBSFilter__inherit__graph.md5  classForwardMod.tex  classMVNSampler.tex  classMVNSampler__coll__graph.md5  classSISRFilter.tex  classSISRFilter__coll__graph.md5  classSISRFilter__inherit__graph.md5  classUniformSampler.tex  classUniformSampler__inherit__graph.md5  classUnivNormSampler.tex  classUnivNormSampler__inherit__graph.md5  classacv__bs.tex  classacv__bs__inherit__graph.md5  classcf__filter.tex  classcf__filter__inherit__graph.md5  classgamFilter.tex  classgamFilter__coll__graph.md5  classgamFilter__inherit__graph.md5  (+211 more)
examples/: .Makefile.swp  CMakeLists.txt  Makefile  data_reader.h  examples  forward_sim.cpp  forward_sim.h  hilb_sort_pf.cpp  hilb_sort_pf.h  main.cpp  pfexamples.mk  pfexamples.project  pfexamples.txt  resamp_comparison.cpp  resamp_comparison.h  svol_apf.h  svol_bs.h  svol_bs_withcovs.h  svol_comparison.cpp  svol_comparison.h  svol_sisr.h  svol_sisr_hilb.h
examples/Release/: main.cpp.o.d  pfexamples  svol_comparison.cpp.o.d
examples/data/: svol_y_data.csv
include/: .rv_eval.h.swp  auxiliary_pf.h  bootstrap_filter.h  bootstrap_filter_with_covariates.h  cf_filters.h  pf_base.h  rbpf.h  resamplers.h  rv_eval.h  rv_samp.h  sisr_filter.h  utils.h
paper/: paper.bib  paper.html  paper.md
smctc_comparison_example/: CMakeLists.txt  acv_bs.h  data.csv  data_reader.h  main.cpp
src/: rv_eval.cpp  rv_samp.cpp  utils.cpp
test/: CMakeLists.txt  Makefile  example_main.cpp  pftest.mk  pftest.project  pftest.txt  test-main.cpp  test_cf_filters.cpp  test_data.csv  test_hmm.cpp  test_resamplers.cpp  test_rv_eval.cpp  test_rv_samp.cpp  test_utils.cpp
test/Debug/: main.cpp.o.d  test_bsf.cpp.o.d  test_resamplers.cpp.o.d  test_rv_eval.cpp.o.d  test_rv_samp.cpp.o.d  test_utils.cpp.o.d
test/Release/: main.cpp.o.d  test_resamplers.cpp.o.d  test_rv_eval.cpp.o.d  test_rv_samp.cpp.o.d  test_utils.cpp.o.d
(+89 files in other folders)
